# reveller

./: .gitignore  CMakeLists.txt  README.md
android-gui/app/: build.gradle  proguard-rules.pro
android-gui/app/src/main/: AndroidManifest.xml
android-gui/app/src/main/java/jgilje/net/reveller/: ConnectActivity.java  ContextMenuRecyclerView.java  MainActivity.java  ManualEntryFragment.java  NavigationActivity.java  RecyclerViewAdapter.java  RevellerConnection.java  RevellerEntry.java  SidListFragment.java
android-gui/app/src/main/res/drawable/: selectable_background_playing.xml
android-gui/app/src/main/res/layout/: activity_connect.xml  activity_main.xml  activity_navigation.xml  fragment_manual_entry.xml  fragment_sid_list.xml  include_list_viewpager.xml  list_item.xml  nav_header.xml  playing.xml
android-gui/app/src/main/res/menu/: list_context_menu.xml
android-gui/app/src/main/res/values/: dimens.xml  dimensions.xml  strings.xml  styles.xml
c64emu/: 6510.c  6510.h  6510_alu.c  6510_branch.c  6510_mem.c  6510_mem.h  6510_move.c  CMakeLists.txt  cia.c  cia.h  sidheader.c  sidheader.h  vic.c  vic.h
cmake/: README.txt
config/hammer/: apex-1.5.6.config  buildroot-2011.08.config  linux-3.0.4.config
debian/: postinst  postrm  prerm
docs/: .gitignore  RevellerZero.sch  bbb-SID_Cape  building_on_windows.md  eagle-libraries.txt  reveller-pi.b#1  reveller-pi.b#2  reveller-pi.b#3  reveller-pi.b#4  reveller-pi.b#6  reveller-pi.b#7  reveller-pi.brd  reveller-pi.s#1  reveller-pi.sch
docs/boarddesign/: .RevellerZero.sch.lck  .reveller-pi-B+HAT.sch.lck  RevellerZero.brd  RevellerZero.sch  reveller-pi-B+HAT.b#2  reveller-pi-B+HAT.b#3  reveller-pi-B+HAT.b#4  reveller-pi-B+HAT.brd  reveller-pi-B+HAT.sch  reveller-pi-REVB.brd
docs/boxdesign/: BottomCase_Rev_A.STEP  BottomCase_Rev_A.STL  TopCover.SLDPRT  TopCoverWithVents.SLDPRT  TopCoverWithVents_Rev_A.STEP  TopCoverWithVents_Rev_A.STL  TopCover_Rev_A.STEP  TopCover_Rev_A.STL
helpers/: endian-conversion.c  endian-conversion.h  insane-menu.c
qt-gui/: .gitignore  CMakeLists.txt  SidPlayer.pro  connectdialog.cpp  connectdialog.h  connectdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  sidheader.cpp  sidheader.h  sidinfo.cpp  sidinfo.h  sidinfo.ui  siditem.cpp  siditem.h  siditemmodel.cpp  siditemmodel.h
sidplayer/: CMakeLists.txt  am335x.h  bcm2835.h  c64emu-support-common.c  console-interface.c  console-interface.h  platform-support-bbb.c  platform-support-bbb.h  platform-support-common.c  platform-support-common.h  platform-support-dummy.c  platform-support-dummy.h  platform-support-hammer.c  platform-support-rpi.c  platform-support-rpi.h  platform-support-stream.c  platform-support-stream.h  sidplayer-bbb.c  sidplayer-dummy.c  sidplayer-hammer-standalone.c  sidplayer-hammer.c  sidplayer-rpi.c  sidplayer.c
sidplayer-frontend/: browser.go  connection.go  cross-compile.sh  gruntfile.js  main.go  package.json  sidplayer.go
sidplayer-frontend/app/: app.js  index.html  styles.scss
sidplayer-frontend/app/components/: CurrentryPlayingComponent.js  DirectoryComponent.js  FilelistComponent.js  SidfileComponent.js
sidplayer-frontend/app/constants/: RevellerConstants.js
sidplayer-frontend/app/controllers/SidplayerAPI/: index.js
sidplayer-frontend/app/controllers/SidplayerController/: index.js
sidplayer-frontend/app/dispatcher/: AppDispatcher.js
sidplayer-frontend/app/stores/: SidfilesStore.js
sidplayer-frontend/sid/: sidfile.go
sidplayer-linux/: CMakeLists.txt  bcm2835.h  c64emu-support-gpio-rpi.c  c64emu-support-gpio.c  console-interface.c  lcd-hammer.c  lcd-hammer.h  lcd.c  lcd.h  platform-support.h  sc2410.h  sidplayer-dummy.c  sidplayer-hammer-gpio-linux.c  sidplayer-hammer-standalone.c  sidplayer-hammer.c  sidplayer-linux.c  sidplayer-rpi-gpio-linux.c  sidplayer-rpi.c
sidplayer-linux/kernel-driver/: compile.sh  sid-timer.c
sidplayer-web/: .gitignore  browser.go  connection.go  go.sum  main.go  searcher.go  sidplayer.go  zeroconf.go
sidplayer-web-backend/: .gitignore  CMakeLists.txt  browser.go  connection.go  go.mod  go.sum  home.html  main.go  searcher.go  sidplayer.go  zeroconf.go
sidplayer-web-backend/sid/: sidfile.go
sidplayer-web-backend/systemd/: reveller  reveller.service
sidplayer-web-frontend/: home.html
sidplayer-web-frontend/css/: page.css
sidplayer-web-frontend/js/: handler.js
sidplayer-web/sid/: sidfile.go
sidplayer-web/systemd/: reveller.service
sidplayer/c64emu/: 6510.c  6510.h  6510_alu.c  6510_branch.c  6510_mem.c  6510_mem.h  6510_move.c  CMakeLists.txt  basic.901226-01.h  cia.c  cia.h  helper.c  helper.h  kernal.901227-03.h  sidheader.c  sidheader.h  vic.c  vic.h
sidplayer/common/: endian-conversion.c  endian-conversion.h  insane-menu.c  insane-menu.h  platform-support.h
sidplayer/kernel-driver/: .gitignore  Makefile
sidplayer/kernel-driver/bbb/: Makefile  compile.sh  sid.c
sidplayer/kernel-driver/hammer/: sid-timer.c
sidplayer/kernel-driver/rpi/: Makefile  dkms.conf  reveller.c  rpi.h  rpi2.h
sidstreamer/: CMakeLists.txt  c64emu-support-file.c  c64emu-support-serial.c  sidstreamer-file.c  sidstreamer-serial.c
utils/: bin-to-hex.go
